<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <DUT Name="Wread_State" Id="{4ff09e83-6bf1-43ee-977c-0f22444ae55d}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE Wread_State :
(
	Triggerd := 0,
	DataWritten := 1,
	Done := 2
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>